unpackaged/main/default/objects/Account_Development_Plan__c/Account_Development_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Development Plan</label>
    <nameField>
        <label>Account Development Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Development Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>