unpackaged/main/default/objects/Account_Development_Plan__c/fields/Action2__c.field-meta.xml
<CustomField>
    <fullName>Action2__c</fullName>
    <label>Action2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>