unpackaged/main/default/objects/Account_Development_Plan__c/fields/Action3__c.field-meta.xml
<CustomField>
    <fullName>Action3__c</fullName>
    <label>Action3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>