unpackaged/main/default/objects/Account_Development_Plan__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Development Plans</relationshipLabel>
    <relationshipName>Account_Development_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>