unpackaged/main/default/objects/Account_Development_Plan__c/fields/Commercial_Contact3__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact3__c</fullName>
    <label>Commercial Contact3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>