unpackaged/main/default/objects/Account_Development_Plan__c/fields/Floor_Planning__c.field-meta.xml
<CustomField>
    <fullName>Floor_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Planning</label>
    <type>Checkbox</type>
</CustomField>