unpackaged/main/default/objects/Account_Development_Plan__c/fields/Growth_Shrinkage__c.field-meta.xml
<CustomField>
    <fullName>Growth_Shrinkage__c</fullName>
    <label>Growth/Shrinkage?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>