unpackaged/main/default/objects/Account_Development_Plan__c/fields/Impact1__c.field-meta.xml
<CustomField>
    <fullName>Impact1__c</fullName>
    <label>Impact1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>