unpackaged/main/default/objects/Account_Development_Plan__c/fields/Impact2__c.field-meta.xml
<CustomField>
    <fullName>Impact2__c</fullName>
    <label>Impact2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>