unpackaged/main/default/objects/Account_Development_Plan__c/fields/Innovation__c.field-meta.xml
<CustomField>
    <fullName>Innovation__c</fullName>
    <label>Innovation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>New Ideas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>