unpackaged/main/default/objects/Account_Development_Plan__c/fields/Margin_Movement__c.field-meta.xml
<CustomField>
    <fullName>Margin_Movement__c</fullName>
    <label>Margin Movement</label>
    <type>TextArea</type>
</CustomField>