unpackaged/main/default/objects/Account_Development_Plan__c/fields/Ops_Contacts2__c.field-meta.xml
<CustomField>
    <fullName>Ops_Contacts2__c</fullName>
    <label>Ops Contacts2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>