unpackaged/main/default/objects/Account_Development_Plan__c/fields/Owner3__c.field-meta.xml
<CustomField>
    <fullName>Owner3__c</fullName>
    <label>Owner3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>