unpackaged/main/default/objects/Account_Development_Plan__c/fields/Rebates__c.field-meta.xml
<CustomField>
    <fullName>Rebates__c</fullName>
    <label>Rebates</label>
    <type>TextArea</type>
</CustomField>