unpackaged/main/default/objects/Account_Development_Plan__c/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <label>Safety</label>
    <length>200</length>
    <type>Text</type>
</CustomField>