unpackaged/main/default/objects/Account_Development_Plan__c/fields/Tactical_Goals__c.field-meta.xml
<CustomField>
    <fullName>Tactical_Goals__c</fullName>
    <inlineHelpText>Account Manager to Complete</inlineHelpText>
    <label>Tactical Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>