unpackaged/main/default/objects/Account_Development_Plan__c/fields/Task1__c.field-meta.xml
<CustomField>
    <fullName>Task1__c</fullName>
    <label>Task1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>