unpackaged/main/default/objects/Account_Development_Plan__c/fields/Task2__c.field-meta.xml
<CustomField>
    <fullName>Task2__c</fullName>
    <label>Task2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>