unpackaged/main/default/objects/Account_Development_Plan__c/fields/Task3__c.field-meta.xml
<CustomField>
    <fullName>Task3__c</fullName>
    <label>Task3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>