unpackaged/main/default/objects/Account_Development_Plan__c/fields/Time1__c.field-meta.xml
<CustomField>
    <fullName>Time1__c</fullName>
    <label>Time1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>