unpackaged/main/default/objects/Account_Development_Plan__c/fields/Time3__c.field-meta.xml
<CustomField>
    <fullName>Time3__c</fullName>
    <label>Time3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>